<resources>
    <string name="app_name">taller_1</string>
    <string name="FIBONACCI">FIBONACCI</string>
    <string name="taller_1">Taller 1</string>
    <string name="factorial">Factorial</string>
    <string name="paises">Paises</string>
    <string name="hintNumero">0</string>
    <string-array name="arregloNumeros">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>